--- a/website/index.html
+++ b/website/index.html
@@ -2,8 +2,11 @@
 	
 <html>
 	<head>
-			<!-- for mobile conversion -->
-			<meta name="viewport" content="width=device-width, initial-scale=1.0">
+			<!-- for mobile conversion -->	
+			<meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
+			<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+			<meta name="HandheldFriendly" content="true">
+			
 			<meta charset = "utf-8">
 			<meta name ="author" content ="Vickel Leung">
 			<meta name="description" content="A simple human being that enjoy programming.">
@@ -20,11 +23,10 @@
 		<script src="script.js"></script>
 				<!-- remove branding -->
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-		 <script>
-		    $(document).ready(function(){ 
-		    $('body').find('img[src$="https://cdn.rawgit.com/000webhost/logo/e9bd13f7/footer-powered-by-000webhost-white2.png"]').remove();
-		   });
-		</script>
+		<script src="removeBranding.js"></script>
+		<script src="updateYear.js"></script>
+
+		 
 	</head>
 	
 <body>
@@ -425,99 +427,16 @@
 		</div>
 </div>
 		<div class ="footer">
-			<p> <span id ="date">2018 id ="date"</span> © All Rights Reserved | Privacy Policy | made with pure <a href ="https://www.youtube.com/watch?v=KxGRhd_iWuE">♥</a> by Vickel </p>
+			<p> <span id ="date"></span> © All Rights Reserved | Privacy Policy | made with pure <a href ="https://www.youtube.com/watch?v=KxGRhd_iWuE">♥</a> by Vickel </p>
 		</div>
 		<!-- ============= end of main part==================== -->
 	
 	<script type="text/javascript" src="aos.js"></script>
+	<script type="text/javascript" src="updateYear.js"></script>
+	<script type="text/javascript" src="quoteAnimation.js"></script>
+
 	<script>
 	AOS.init();
-	
-  // document.write(new Date().getFullYear());
-
-
-
-	// quote animations
-	// ——————————————————————————————————————————————————
-// TextScramble
-// ——————————————————————————————————————————————————
-
-class TextScramble {
-  constructor(el) {
-    this.el = el
-    this.chars = '!<>-_\\/[]{}—=+*^?#________'
-    this.update = this.update.bind(this)
-  }
-  setText(newText) {
-    const oldText = this.el.innerText
-    const length = Math.max(oldText.length, newText.length)
-    const promise = new Promise((resolve) => this.resolve = resolve)
-    this.queue = []
-    for (let i = 0; i < length; i++) {
-      const from = oldText[i] || ''
-      const to = newText[i] || ''
-      const start = Math.floor(Math.random() * 40)
-      const end = start + Math.floor(Math.random() * 40)
-      this.queue.push({ from, to, start, end })
-    }
-    cancelAnimationFrame(this.frameRequest)
-    this.frame = 0
-    this.update()
-    return promise
-  }
-  update() {
-    let output = ''
-    let complete = 0
-    for (let i = 0, n = this.queue.length; i < n; i++) {
-      let { from, to, start, end, char } = this.queue[i]
-      if (this.frame >= end) {
-        complete++
-        output += to
-      } else if (this.frame >= start) {
-        if (!char || Math.random() < 0.28) {
-          char = this.randomChar()
-          this.queue[i].char = char
-        }
-        output += `<span class="dud">${char}</span>`
-      } else {
-        output += from
-      }
-    }
-    this.el.innerHTML = output
-    if (complete === this.queue.length) {
-      this.resolve()
-    } else {
-      this.frameRequest = requestAnimationFrame(this.update)
-      this.frame++
-    }
-  }
-  randomChar() {
-    return this.chars[Math.floor(Math.random() * this.chars.length)]
-  }
-}
-
-// ——————————————————————————————————————————————————
-// Example
-// ——————————————————————————————————————————————————
-const phrases = [
-  'Life is like riding a bicycle.',
-  'To keep your balance',
-  'you must keep moving.',
-  '- Albert Einstein'
-]
-
-const el = document.querySelector('.text')
-const fx = new TextScramble(el)
-
-let counter = 0
-const next = () => {
-  fx.setText(phrases[counter]).then(() => {
-    setTimeout(next, 2800)
-  })
-  counter = (counter + 1) % phrases.length
-}
-
-next()
 
 	</script>
 
