added skill animation

--- a/website/AboutMe.html
+++ b/website/AboutMe.html
@@ -67,7 +67,7 @@
 						<div id="str">
 							<!-- <p id="myParagraph"> -->
 							<p>
-								&emsp;&emsp;My path as a web & android developer was not a walk in the park. There were many obstacles in my ways from financial issues to my father having stroke. Nonetheless, it is because of that I was able to become who I am today. I used to be an average student in high school and video game had a huge impact during my school year. However, that is a story for another time. 
+								&emsp;&emsp;My path as a web & android developer was not a walk in the park. There were many obstacles in my ways from financial issues to my father having stroke. Nonetheless, it is because of that I was able to become who I am today. I used to be an average wstudent in high school and video game had a huge impact during my school year. However, that is a story for another time. 
 								<br ><br >
 								&emsp;&emsp;After high school, I decided to do something productive, which is getting a diploma in languages at Dawson college, but it was during my last year when I took an elective in computer science that I fell in love with programming. Soon after my graduation, I've applied to an university and major in computer science. Now here I am trying to change the world one line code at a time.	
 								<br><br>
@@ -114,26 +114,172 @@
 		<div class ="myTaste">
 
 			<div class ="education">
-				<div class ="box3">
-					<h2>My Education & Skillset</h2>
-					<p>Here is a list of all my education and what skill I can do.<br >Concordia University : Bachelor of Computer Science 
 				
-					 <br>
-					 Dawson College: DEC in Art, Letter and Communication – Language Profil
-					 	<br>
-					 	Nothing much happened in those 2 years, I did however learned a lot of languages and made some good memories.
-					</p>
+			<div class ="test">
+					<h1>my skills</h1>
 
-				</div>
+					<section>
+						<ul class="barWrap">
+							<li class ="bar"></li>
+							<li class ="bar"></li>
+							<li class ="bar"></li>
+							<li class ="bar"></li>
+							<li class ="bar"></li>
+							<li class ="bar"></li>
+							<li class ="bar"></li>
+							<li class ="bar"></li>
+							<li class ="bar"></li>
+							<li class ="bar"></li>
+							<li class ="bar">
+								<i></i>
+							</li>
+						</ul>
+					<div class ="skillImg">
+						<img src="img/css.png">
+					</div>
+					</section>
+			
+				<section>
+					<ul class="barWrap">
+						<li class ="bar"></li>
+						<li class ="bar"></li>
+						<li class ="bar"></li>
+						<li class ="bar"></li>
+						<li class ="bar"></li>
+						<li class ="bar"></li>
+						<li class ="bar"></li>
+						<li class ="bar"></li>
+						<li class ="bar"></li>
+						<li class ="bar"></li>
+						<li class ="bar">
+							<i></i>
+						</li>
+					</ul>
+					<div class ="skillImg">
+						<img src="img/html.png">
+					</div>
+				</section>
+				<section>
+					<ul class="barWrap">
+						<li class ="bar"></li>
+						<li class ="bar"></li>
+						<li class ="bar"></li>
+						<li class ="bar"></li>
+						<li class ="bar"></li>
+						<li class ="bar"></li>
+						<li class ="bar"></li>
+						<li class ="bar"></li>
+						<li class ="bar"></li>
+						<li class ="bar"></li>
+						<li class ="bar">
+							<i></i>
+						</li>
+					</ul>
+					<div class ="skillImg">
+						<img src="img/javascript.png">
+					</div>
+				</section>
+				<section>
+					<ul class="barWrap">
+						<li class ="bar"></li>
+						<li class ="bar"></li>
+						<li class ="bar"></li>
+						<li class ="bar"></li>
+						<li class ="bar"></li>
+						<li class ="bar"></li>
+						<li class ="bar"></li>
+						<li class ="bar"></li>
+						<li class ="bar"></li>
+						<li class ="bar"></li>
+						<li class ="bar">
+							<i></i>
+						</li>
+					</ul>
+					<div class ="skillImg">
+						<img src="img/java.png">
+					</div>
+				</section>
+				<section>
+					<ul class="barWrap">
+						<li class ="bar"></li>
+						<li class ="bar"></li>
+						<li class ="bar"></li>
+						<li class ="bar"></li>
+						<li class ="bar"></li>
+						<li class ="bar"></li>
+						<li class ="bar"></li>
+						<li class ="bar"></li>
+						<li class ="bar"></li>
+						<li class ="bar"></li>
+						<li class ="bar">
+							<i></i>
+						</li>
+					</ul>
+					<div class ="skillImg">
+						<img src="img/cpp.png">
+					</div>
+				</section>
+				<section>
+					<ul class="barWrap">
+						<li class ="bar"></li>
+						<li class ="bar"></li>
+						<li class ="bar"></li>
+						<li class ="bar"></li>
+						<li class ="bar"></li>
+						<li class ="bar"></li>
+						<li class ="bar"></li>
+						<li class ="bar"></li>
+						<li class ="bar"></li>
+						<li class ="bar"></li>
+						<li class ="bar">
+							<i></i>
+						</li>
+					</ul>
+					<div class ="skillImg">
+						<img src="img/android.png">
+					</div>
+				</section>
+				<section>
+					<ul class="barWrap">
+						<li class ="bar"></li>
+						<li class ="bar"></li>
+						<li class ="bar"></li>
+						<li class ="bar"></li>
+						<li class ="bar"></li>
+						<li class ="bar"></li>
+						<li class ="bar"></li>
+						<li class ="bar"></li>
+						<li class ="bar"></li>
+						<li class ="bar"></li>
+						<li class ="bar"></i>
+						</li>
+					</ul>
+					<div class ="skillImg">
+						<img src="img/mysql.png">
+					</div>
+				</section>
+				<section>
+					<ul class="barWrap">
+						<li class ="bar"></li>
+						<li class ="bar"></li>
+						<li class ="bar"></li>
+						<li class ="bar"></li>
+						<li class ="bar"></li>
+						<li class ="bar"></li>
+						<li class ="bar"></li>
+						<li class ="bar"></li>
+						<li class ="bar"></li>
+						<li class ="bar"></li>
+						<li class ="bar">
+							<i></i>
+						</li>
+					</ul>
+					<div class ="skillImg">
+						<img src="img/reactjs.png">
+					</div>
+				</section>
 			</div>
 
-
-			<div class ="skillsLevel" >
-				<div class ="myskills">
-					<img src="img/progSkill.png">
-				</div>
-
-			</div>
 		</div>
 
 		<div class ="showResume">
@@ -184,7 +330,7 @@
 	</div>
 
 		<div class ="footer">
-			<p> <span id ="date"></span> © All Rights Reserved | Privacy Policy | made with pure <a href ="https://www.youtube.com/watch?v=s0JD8pOgD1s">♥</a> by Vickel </p>
+			<p> 2017-<span id ="date"></span> © All Rights Reserved | Privacy Policy | made with pure <a href ="https://www.youtube.com/watch?v=s0JD8pOgD1s">♥</a> by Vickel </p>
 		</div>
 
 		<script type="text/javascript" src="updateYear.js"></script>
