--- a/website/project.html
+++ b/website/project.html
@@ -102,7 +102,7 @@
 
 							 </div>
 							 <div class="projectDescription">
-							A game of battleship where each player take turn firing a rocket to sink the opponent ship. The game was implemented using java, and it ran on the console.
+							A game of battleship where each player take turn firing a rocket to sink the opponent ship. The game was implemented using java, and it ran on the console. The game was made as a simple example of how 2D array are implemented and also how to use basic if/else to manipulate as a simple AI computer. 
 							</div>
 							 <br >
 
@@ -127,7 +127,7 @@
 
 							 </div>
 							 <div class="projectDescription">
-							A simple tictactoe game made with Android Studio. There are two game modes: player vs player and player vs computer. The AI prevents the player from winning which  results in the best case being a draw. 
+							A my first android application made with Android Studio. There are two game modes: player vs player and player vs computer. The basic AI prevents the player from winning which results in the best case being a draw if the player play first. I was able to learn a lot about how to use activities and the program in general. I have encoutered many problem but I was able to learn a lot from my mistake. One of the main problem was how to synchronize turns and tell who won the game. I was able to solve this problem by using a turn counter and also having a boolean variable to check if either players has won.
 							</div>
 							 <br >
 
@@ -301,7 +301,7 @@
 	<!-- ============= end of main part==================== -->
 	
 	<div class ="footer">
-			<p> <span id ="date"></span> © All Rights Reserved | Privacy Policy | made with pure <a href ="https://www.youtube.com/watch?v=WhZljqLfGhc">♥</a> by Vickel </p>
+			<p> 2017-<span id ="date"></span> © All Rights Reserved | Privacy Policy | made with pure <a href ="https://www.youtube.com/watch?v=WhZljqLfGhc">♥</a> by Vickel </p>
 	</div>
 
 	<script type="text/javascript" src="aos.js"></script>
