--- a/website/index.html
+++ b/website/index.html
@@ -6,7 +6,7 @@
 			<meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
 			<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 			<meta name="HandheldFriendly" content="true">
-			
+
 			<meta charset = "utf-8">
 			<meta name ="author" content ="Vickel Leung">
 			<meta name="description" content="A simple human being that enjoy programming.">
@@ -17,7 +17,7 @@
 			</title>
 			<link rel ="stylesheet" type ="text/css" href ="style.css">
 			<link rel ="stylesheet" type ="text/css" href ="aos.css">
-			<link rel ="shortcut icon" type="image/png" href="turtle1.png"/>
+			<link rel ="shortcut icon"  href="img/turtle.png"/>
 
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 		<script src="script.js"></script>
@@ -427,7 +427,7 @@
 		</div>
 </div>
 		<div class ="footer">
-			<p> <span id ="date"></span> © All Rights Reserved | Privacy Policy | made with pure <a href ="https://www.youtube.com/watch?v=KxGRhd_iWuE">♥</a> by Vickel </p>
+			<p> 2017-<span id ="date"></span> © All Rights Reserved | Privacy Policy | made with pure <a href ="https://www.youtube.com/watch?v=KxGRhd_iWuE">♥</a> by Vickel </p>
 		</div>
 		<!-- ============= end of main part==================== -->
 	
