updated about me page

--- a/website/index.html
+++ b/website/index.html
@@ -22,6 +22,7 @@
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 		<script src="script.js"></script>
 				<!-- remove branding -->
+		<!-- jquery library for scrollup -->
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 		<script src="removeBranding.js"></script>
 		<script src="updateYear.js"></script>
@@ -143,15 +144,22 @@
 									<img src="img/hangmanImg.png" alt="hangmanImg">
 								</a>
 							</div>
-
+							
+								<div class ="linkToProject">
+								 	<a href="https://appetize.io/app/ne1b45y5cn703bex99160crg20?device=nexus5&scale=75&orientation=portrait&osVersion=7.1"
+									target="_blanc">
+										<p class ="linkText"> 
+											<img src="img/game_control.png" alt="gameControl">
+											<em>Click to play game</em>
+										</p>
+									</a>
+								 </div>
 
 							 <div class ="projectType">
 							 	<span class ="personalColor">(Personal project)</span> - Jan 2018
 							 </div>
 
-							 <div class ="linkToProject">
-
-							 </div>
+							 
 
 						 </div>
 
