--- a/website/teaching.html
+++ b/website/teaching.html
@@ -119,7 +119,7 @@
 		</div>
 
 		<div class ="linkToCourse">
-			<p class = "courseDescription">Are you currently taking computer science/software engineer Course at concordia? You are in luck, click on the link below to get a google drive of all course I've taken.
+			<p class = "courseDescription">Are you currently taking computer science/software engineer Course at concordia? You are in luck, click on the link below to get a link to my google drive. It contains lots of juicy ressources that might be VERY helpful! :]
 			</p>
 			<a class ="googleLink" href="https://drive.google.com/open?id=0B8a2R11fK-RoT3djcms2VXFkUWc">View all my courses</a>
 
